Fix progress bar vertical alignment

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -241,8 +241,8 @@ body {
   color: #FFFFFF;
   background-color: #A71515;
   height: 30px;
+  line-height: 30px;
   text-align: center;
-  padding-top: 10px;
 }
 
 .progress-bar-container.zero-percent .progress-bar {
